--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-fastapi
-uvicorn
-pytesseract
-opencv-python-headless
-numpy
-pillow
-python-multipart
+fastapi==0.110.0
+uvicorn[standard]==0.27.1
+
+pytesseract==0.3.10
+opencv-python-headless==4.9.0.80
+numpy==1.26.4
+
+sqlalchemy==2.0.27
+
+python-multipart==0.0.9
